--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="utf8">
             <title>Waaz Istibsaar</title>
-            <link rel="stylesheet" href="Al-Kanz fonts">
+            <link rel="stylesheet" href="Al-Kanz fonts.ttf">
             <link rel="stylesheet" href="istibsaar.CSS">
 
         </head>
